# axum-zero-to-production

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20250703015458_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
