[package]
name = "axum-zero-to-production"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum-zero-to-production"


[dependencies]
axum = "0.8.4"
config = "0.15.11"
reqwest = "0.12.20"
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1.45.1", features = ["full"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
